# apollo-io-mcp-server

./: .env.secrets.example  .gitignore  .mcp.json  .mcp.json.example  INSTALL-VALIDATION.md  PUBLISHING.md  README.md  __init__.py  __main__.py  apollo_client.py  cli.py  pyproject.toml  server.py  test_local.py
.claude/: claude_code.json  settings.local.json
apollo/: __init__.py  accounts.py  contacts.py  custom_fields.py  labels.py  organization.py  organization_job_postings.py  organization_search.py  people.py  people_bulk.py  people_search.py  usage_stats.py
docs/: testing.md
docs/tools/: accounts.md  contacts.md  misc.md  organizations.md  people.md
scripts/: shorten_docstrings.py  strip_field_descriptions.py
test-project/: .mcp.json.example
test/projects/uv-project/: .gitignore  .mcp.json.example
test/projects/uv-project/test-project/: SUMMARY.md  test_mcp_integration.py
test/projects/uvx-project/: .mcp.json.example
tests/: __init__.py  conftest.py  fixtures.py  test_integration_accounts_tools.py  test_integration_contacts.py  test_rate_limiting.py  test_unit_contacts.py  test_unit_list_helpers.py  test_unit_people.py  validate-configs.sh
tests/integration/: test_accounts_client.py  test_contacts.py  test_custom_fields.py  test_labels.py  test_organization.py  test_people.py
tests/projects/uv-project/: README.md
tests/projects/uvx-project/: README.md
tests/test/: README.md  validate-configs.sh
tests/test/projects/uv-project/test-project/: test-queries.md
tests/tools/: test_accounts.py  test_contacts.py
tests/unit/: test_accounts.py  test_contacts.py  test_custom_fields.py  test_labels.py  test_list_helpers.py  test_organization.py
tools/: __init__.py  accounts.py  contacts.py  misc.py  organizations.py  people.py
