[project]
name = "apollo-io-mcp-server"
version = "0.1.0"
description = "MCP server that exposes the Apollo.io API functionalities as tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Edward Choh"}
]
maintainers = [
    {name = "Cedric Hurst", email = "cedric@spantree.net"}
]
license = {text = "MIT"}
keywords = ["mcp", "apollo", "api", "model-context-protocol", "sales", "prospecting", "enrichment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business",
]

dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/edwardchoh/apollo-io-mcp-server"
Repository = "https://github.com/edwardchoh/apollo-io-mcp-server"
Issues = "https://github.com/edwardchoh/apollo-io-mcp-server/issues"
Documentation = "https://github.com/edwardchoh/apollo-io-mcp-server#readme"

[project.scripts]
apollo-io-mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apollo"]
include = [
    "server.py",
    "apollo_client.py",
]
